--- a/wercker.yml
+++ b/wercker.yml
@@ -25,5 +25,5 @@ sonar:
   steps:
     # https://github.com/wercker/step-maven
     - java/maven:
-      goals: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dmaven.test.failure.ignore=true -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=Fahim57 -Dsonar.login=880a57cc0cdb97079fab694a4dfe74c6a5ebe6b4 cache_repo: true
+      goals: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dmaven.test.failure.ignore=true -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=Fahim57 -Dsonar.login=880a57cc0cdb97079fab694a4dfe74c6a5ebe6b4cache_repo: true
       version: 3.5.2
